<resources>
    <string name="app_name">The Mealz</string>
    <string name="title_mealoption_detail">Meal Option Detail</string>
    <string name="main_title">מה בא לך לאכול?</string>
    <string name="loading">Loading\\u2026</string>
    <string name="restaurants_list_title">בחר מסעדה להזמנה</string>
    <string name="title_activity_order_submission">Order Submission</string>
    <string name="action_settings">Settings</string>
    <string name="order_submission_main_title">סיכום הזמנה</string>
    <string name="order_summary">סיכום הזמנה</string>
    <string name="order_submission_submit_button"><![CDATA[המשך >]]></string>
    <string name="order_submission_price_label">סה\"כ:</string>
    <string name="details_form_main_title">הזן פרטים אישיים והזמן</string>
    <string name="details_form_submit_button"><![CDATA[בצע הזמנה >]]></string>
    <string name="first_name_plus_last_name">שם פרטי + משפחה</string>
    <string name="city">עיר</string>
    <string name="street">רחוב</string>
    <string name="house_number">מספר בית</string>
    <string name="flat_number">מספר דירה</string>
    <string name="phone_number">מספר טלפון</string>
    <string name="title_activity_meal_option_flavors">MealOptionFlavorsActivity</string>
    <string name="meal_option_flavors_submit_button"><![CDATA[המשך >]]></string>
</resources>
